--- a/media-links.html
+++ b/media-links.html
@@ -126,18 +126,18 @@
             Chariot, Bridge of Spies author Giles Whittell reveals it to be a
             fundamentally misconceived raid whose impact and legacy was secured
             by astonishing bravery.
-            <br />
-            <br />
-            <br />
-            <a
-              href="https://shop.nam.ac.uk/the-greatest-raid-st-nazaire-1942-the-heroic-story.html"
-              target="_blank"
-              rel="noopener"
-              style="font-size: 2rem"
-              aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
-              >Buy Now</a
-            >
           </figcaption>
+          <!-- <br />
+          <br />
+          <br /> -->
+          <a
+            href="https://shop.nam.ac.uk/the-greatest-raid-st-nazaire-1942-the-heroic-story.html"
+            target="_blank"
+            rel="noopener"
+            style="font-size: 2rem; float: right"
+            aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
+            >Buy Now</a
+          >
         </figure>
 
         <!-- into jaws of death book and link -->
@@ -162,18 +162,18 @@
             Victoria Crosses. Into the Jaws of Death is the true story of how
             the decisive courage of a small group of men changed the course of
             the war.
-            <br />
-            <br />
-            <br />
-            <a
-              href="https://www.bookwiseonline.co.uk/into-the-jaws-of-death-3090-p.asp"
-              target="_blank"
-              rel="noopener"
-              style="font-size: 2rem"
-              aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
-              >Buy Now</a
-            >
           </figcaption>
+          <!-- <br />
+          <br />
+          <br /> -->
+          <a
+            href="https://www.bookwiseonline.co.uk/into-the-jaws-of-death-3090-p.asp"
+            target="_blank"
+            rel="noopener"
+            style="font-size: 2rem; float: right"
+            aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
+            >Buy Now</a
+          >
         </figure>
       </section>
     </main>
