navbar corrected due to error meaning it did not open, gallery page made responsive

--- a/gallery.html
+++ b/gallery.html
@@ -55,7 +55,7 @@
 
     <!-- main -->
     <main>
-      <h1>Gallery and VC Winners</h1>
+      <h1 class="gallery-header">Gallery and VC Winners</h1>
       <!-- image gallery -->
       <div class="row">
         <!-- first colum -->
