--- a/media-links.html
+++ b/media-links.html
@@ -108,6 +108,7 @@
             class="st-nazaire-books-fig-img"
           />
           <figcaption class="st-nazaire-books-fig-review">
+            <i class="fa-solid fa-quote-left"></i>
             In the darkest months of the Second World War, Churchill approved
             what seemed to many like a suicide mission. Under orders to attack
             the St Nazaire U-boat base on the Atlantic seaboard, British
@@ -126,18 +127,19 @@
             Chariot, Bridge of Spies author Giles Whittell reveals it to be a
             fundamentally misconceived raid whose impact and legacy was secured
             by astonishing bravery.
+            <i class="fa-solid fa-quote-right"></i>
+            <br />
+            <br />
+            <br />
+            <a
+              href="https://shop.nam.ac.uk/the-greatest-raid-st-nazaire-1942-the-heroic-story.html"
+              target="_blank"
+              rel="noopener"
+              style="font-size: 2rem; float: right"
+              aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
+              >Buy Now</a
+            >
           </figcaption>
-          <!-- <br />
-          <br />
-          <br /> -->
-          <a
-            href="https://shop.nam.ac.uk/the-greatest-raid-st-nazaire-1942-the-heroic-story.html"
-            target="_blank"
-            rel="noopener"
-            style="font-size: 2rem; float: right"
-            aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
-            >Buy Now</a
-          >
         </figure>
 
         <!-- into jaws of death book and link -->
@@ -148,6 +150,7 @@
             class="st-nazaire-books-fig-img"
           />
           <figcaption class="st-nazaire-books-fig-review">
+            <i class="fa-solid fa-quote-left"></i>
             It is the night of 28 March 1942. Royal Navy and British commandos
             are poised to assault the German-held port of Saint-Nazaire in what
             will be one of the most audacious and daring raids of the Second
@@ -161,19 +164,19 @@
             valour, eighty-nine decorations were awarded, including five
             Victoria Crosses. Into the Jaws of Death is the true story of how
             the decisive courage of a small group of men changed the course of
-            the war.
+            the war.<i class="fa-solid fa-quote-right"></i>
+            <br />
+            <br />
+            <br />
+            <a
+              href="https://www.bookwiseonline.co.uk/into-the-jaws-of-death-3090-p.asp"
+              target="_blank"
+              rel="noopener"
+              style="font-size: 2rem; float: right"
+              aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
+              >Buy Now</a
+            >
           </figcaption>
-          <!-- <br />
-          <br />
-          <br /> -->
-          <a
-            href="https://www.bookwiseonline.co.uk/into-the-jaws-of-death-3090-p.asp"
-            target="_blank"
-            rel="noopener"
-            style="font-size: 2rem; float: right"
-            aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
-            >Buy Now</a
-          >
         </figure>
       </section>
     </main>
