correct css for media page and for books section of media page, make the section responsive

--- a/media-links.html
+++ b/media-links.html
@@ -99,8 +99,11 @@
         ></iframe>
       </section>
       <!-- operation chariot book and link -->
+
       <section class="st-nazaire-books">
-        <h4>Looking for a good book?</h4>
+        <div class="st-nazaire-books-head">
+          <h4>Looking for a good book?</h4>
+        </div>
         <figure class="st-nazaire-books-fig">
           <img
             src="assets/images/the greatest raid - book.jpg"
@@ -108,37 +111,39 @@
             class="st-nazaire-books-fig-img"
           />
           <figcaption class="st-nazaire-books-fig-review">
-            <i class="fa-solid fa-quote-left"></i>
-            In the darkest months of the Second World War, Churchill approved
-            what seemed to many like a suicide mission. Under orders to attack
-            the St Nazaire U-boat base on the Atlantic seaboard, British
-            commandos undertook "the greatest raid of all", turning an old
-            destroyer into a live bomb and using it to ram the gates of a Nazi
-            stronghold. Five Victoria Crosses were awarded -- more than in any
-            similar operation. Drawing on official documents, interviews,
-            unknown accounts and the astonished reactions of French civilians
-            and German forces, The Greatest Raid recreates in cinematic detail
-            the hours in which the "Charioteers" fought and died, from Lt Gerard
-            Brett, the curator at the V & A, to "Bertie" Burtinshaw, who went
-            into battle humming There'll Always be an England, and from Lt
-            Stuart Chant, who set the fuses with 90 seconds to escape, to the
-            epic solo reconnaissance of the legendary Times journalist Capt
-            Micky Burn. Unearthing the untold human stories of Operation
-            Chariot, Bridge of Spies author Giles Whittell reveals it to be a
-            fundamentally misconceived raid whose impact and legacy was secured
-            by astonishing bravery.
-            <i class="fa-solid fa-quote-right"></i>
-            <br />
-            <br />
-            <br />
-            <a
-              href="https://shop.nam.ac.uk/the-greatest-raid-st-nazaire-1942-the-heroic-story.html"
-              target="_blank"
-              rel="noopener"
-              style="font-size: 2rem; float: right"
-              aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
-              >Buy Now</a
-            >
+            <div class="style-test">
+              <i class="fa-solid fa-quote-left"></i>
+              In the darkest months of the Second World War, Churchill approved
+              what seemed to many like a suicide mission. Under orders to attack
+              the St Nazaire U-boat base on the Atlantic seaboard, British
+              commandos undertook "the greatest raid of all", turning an old
+              destroyer into a live bomb and using it to ram the gates of a Nazi
+              stronghold. Five Victoria Crosses were awarded -- more than in any
+              similar operation. Drawing on official documents, interviews,
+              unknown accounts and the astonished reactions of French civilians
+              and German forces, The Greatest Raid recreates in cinematic detail
+              the hours in which the "Charioteers" fought and died, from Lt
+              Gerard Brett, the curator at the V & A, to "Bertie" Burtinshaw,
+              who went into battle humming There'll Always be an England, and
+              from Lt Stuart Chant, who set the fuses with 90 seconds to escape,
+              to the epic solo reconnaissance of the legendary Times journalist
+              Capt Micky Burn. Unearthing the untold human stories of Operation
+              Chariot, Bridge of Spies author Giles Whittell reveals it to be a
+              fundamentally misconceived raid whose impact and legacy was
+              secured by astonishing bravery.
+              <i class="fa-solid fa-quote-right"></i>
+              <br />
+              <br />
+              <br />
+              <a
+                href="https://shop.nam.ac.uk/the-greatest-raid-st-nazaire-1942-the-heroic-story.html"
+                target="_blank"
+                rel="noopener"
+                style="font-size: 2rem; float: right"
+                aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
+                >Buy Now</a
+              >
+            </div>
           </figcaption>
         </figure>
 
@@ -150,32 +155,36 @@
             class="st-nazaire-books-fig-img"
           />
           <figcaption class="st-nazaire-books-fig-review">
-            <i class="fa-solid fa-quote-left"></i>
-            It is the night of 28 March 1942. Royal Navy and British commandos
-            are poised to assault the German-held port of Saint-Nazaire in what
-            will be one of the most audacious and daring raids of the Second
-            World War. The plan is simple: to drive an old destroyer, packed
-            with three tons of explosive, at full speed into the outer gate of
-            the Normandie dock. The aim is to destroy the base from which the
-            formidable battleship Tirpitz would be able to devastate the convoys
-            supplying Britain from the United States. 'Operation Chariot' was to
-            be dramatically successful, but at a great cost. Fewer than half the
-            men who went on the mission returned. In recognition of their
-            valour, eighty-nine decorations were awarded, including five
-            Victoria Crosses. Into the Jaws of Death is the true story of how
-            the decisive courage of a small group of men changed the course of
-            the war.<i class="fa-solid fa-quote-right"></i>
-            <br />
-            <br />
-            <br />
-            <a
-              href="https://www.bookwiseonline.co.uk/into-the-jaws-of-death-3090-p.asp"
-              target="_blank"
-              rel="noopener"
-              style="font-size: 2rem; float: right"
-              aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
-              >Buy Now</a
-            >
+            <div class="style-test">
+              <i class="fa-solid fa-quote-left"></i>
+              It is the night of 28 March 1942. Royal Navy and British commandos
+              are poised to assault the German-held port of Saint-Nazaire in
+              what will be one of the most audacious and daring raids of the
+              Second World War. The plan is simple: to drive an old destroyer,
+              packed with three tons of explosive, at full speed into the outer
+              gate of the Normandie dock. The aim is to destroy the base from
+              which the formidable battleship Tirpitz would be able to devastate
+              the convoys supplying Britain from the United States. 'Operation
+              Chariot' was to be dramatically successful, but at a great cost.
+              Fewer than half the men who went on the mission returned. In
+              recognition of their valour, eighty-nine decorations were awarded,
+              including five Victoria Crosses. Into the Jaws of Death is the
+              true story of how the decisive courage of a small group of men
+              changed the course of the war.<i
+                class="fa-solid fa-quote-right"
+              ></i>
+              <br />
+              <br />
+              <br />
+              <a
+                href="https://www.bookwiseonline.co.uk/into-the-jaws-of-death-3090-p.asp"
+                target="_blank"
+                rel="noopener"
+                style="font-size: 2rem; float: right"
+                aria-label="Visit this page to purchase a copy of the book (opens in a new tab)"
+                >Buy Now</a
+              >
+            </div>
           </figcaption>
         </figure>
       </section>
