change html code for youtube video section, also updated CSS for youtube section and made gallery and media page fully responsive

--- a/media-links.html
+++ b/media-links.html
@@ -58,26 +58,23 @@
       <h1>Media Content</h1>
       <!-- youtube video documentary -->
       <section class="youtube-documentary">
-        <div class="youtube-documentary-head">
-          <h4>The Greatest Raid of All</h4>
-        </div>
-        <div class="youtube-documentary-video">
-          <iframe
-            src="https://www.youtube.com/embed/07Zd0Oy8JyQ?si=vuq31L7646uaIDDR"
-            title="youtube video of documentary of St Nazaire Raid"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-            id="clarkson-documentary-title"
-            alt="documentary by jeremy clarkson about the St Nazaire Raid"
-          ></iframe>
+        <div class="youtube-documentary-innervid">
+          <div class="youtube-documentary-head">
+            <h4>The Greatest Raid of All</h4>
+          </div>
+          <div class="youtube-documentary-video">
+            <iframe
+              src="https://www.youtube.com/embed/07Zd0Oy8JyQ"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </div>
         </div>
       </section>
 
       <!-- podcast and books -->
       <section class="podcast">
         <!-- first hand account podcast -->
-
         <h4 class="podcast-header">
           <a
             href="https://evergreenpodcasts.com/warriors-in-their-own-words/lt-col-r-k-montgomery-the-st-nazaire-raid"
@@ -88,7 +85,6 @@
             Lt Col R.K. Montgomery: The St. Nazaire Raid
           </a>
         </h4>
-
         <iframe
           title="interview with Lt Col R.K. Montgomery who took part in St Nazaire Raid"
           frameborder="0"
