media query added for index page to make page responsive

--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
             <img
               src="assets/images/Operation-Chariot-memorial-closeup.webp"
               alt="Elephant at sunset"
+              width="100%"
               class="st-nazaire-memorial-img"
             />
             <figcaption class="st-nazaire-memorial-caption">
