css styling added to gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -159,13 +159,12 @@
       <article class="vc-winners">
         <h3 class="vc-winners-title">VC Winners</h3>
         <section class="vc-winners-card">
-          <div>
-            <img
-              src="assets/images/William Alfred SAVAGE.png"
-              alt="image of VC winner William Alfred SAVAGE"
-            />
-            <h3 class="vc-winners-card-title">William Alfred SAVAGE</h3>
-          </div>
+          <img
+            src="assets/images/William Alfred SAVAGE.png"
+            alt="image of VC winner William Alfred SAVAGE"
+          />
+          <h3 class="vc-winners-card-title">William Alfred SAVAGE</h3>
+
           <blockquote
             cite="https://vcgca.org/our-people/profile/1465/william-alfred"
           >
@@ -298,9 +297,10 @@
             only of his own valour but also of that of the unnamed officers and
             men of a very gallant ship’s company, many of whom have not
             returned....<i class="fa-solid fa-quote-right"></i>
+            <br />
             <strong
               ><a href="www.google.com" target="_blank"
-                >full citation</a
+                >Full Citation</a
               ></strong
             >
           </blockquote>
