added external links to citations

--- a/gallery.html
+++ b/gallery.html
@@ -181,7 +181,10 @@
             entirely exposed positions against Enemy fire at very close
             range....<i class="fa-solid fa-quote-right"></i>
             <strong
-              ><a href="www.google.com" target="_blank"
+              ><a
+                href="https://vcgca.org/our-people/profile/1465/william-alfred"
+                target="_blank"
+                rel="noopener"
                 >full citation</a
               ></strong
             >
@@ -211,7 +214,10 @@
             able to withdraw through an intense barrage of close range fire was
             almost a miracle...<i class="fa-solid fa-quote-right"></i>
             <strong
-              ><a href="www.google.com" target="_blank"
+              ><a
+                href="https://vcgca.org/our-people/profile/1687/robert-edward-dudley"
+                target="_blank"
+                rel="noopener"
                 >full citation</a
               ></strong
             >
@@ -243,7 +249,10 @@
               class="fa-solid fa-quote-right"
             ></i>
             <strong
-              ><a href="www.google.com" target="_blank"
+              ><a
+                href="https://vcgca.org/our-people/profile/279/augustus-charles"
+                target="_blank"
+                rel="noopener"
                 >full citation</a
               ></strong
             >
@@ -272,7 +281,10 @@
             the greatest of coolness and with complete disregard of the enemy’s
             fire.....<i class="fa-solid fa-quote-right"></i>
             <strong
-              ><a href="www.google.com" target="_blank"
+              ><a
+                href="https://vcgca.org/our-people/profile/1555/thomas-frank"
+                target="_blank"
+                rel="noopener"
                 >full citation</a
               ></strong
             >
@@ -299,7 +311,10 @@
             returned....<i class="fa-solid fa-quote-right"></i>
             <br />
             <strong
-              ><a href="www.google.com" target="_blank"
+              ><a
+                href="https://vcgca.org/our-people/profile/1443/stephen-halden"
+                target="_blank"
+                rel="noopener"
                 >Full Citation</a
               ></strong
             >
