fixed all image names annd iamge file path

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
       rel="icon"
       type="images/x-icon"
-      href="assets/images/Commando-Insignia.jpg"
+      href="assets/images/commando-insignia.jpg"
     />
     <title>St Nazaire Raid</title>
     <!-- Meta tags for search engines -->
@@ -24,7 +24,7 @@
     <header>
       <a href="index.html">
         <img
-          src="assets/images/Commando-Insignia.jpg"
+          src="assets/images/commando-insignia.jpg"
           alt="british commando insignia"
           id="logo"
         />
@@ -93,7 +93,7 @@
         <h1>The St Nazaire Raid - Operation Chariot</h1>
         <section class="st-nazaire-main-content">
           <img
-            src="assets/images/Tirpitz.jpg"
+            src="assets/images/tirpitz.jpg"
             alt="image of Tirpitz"
             class="tirpitz"
           />
@@ -139,7 +139,7 @@
         </section>
         <section class="st-nazaire-main-content">
           <img
-            src="assets/images/detailed map plan.JPG"
+            src="assets/images/detailed-map-plan.JPG"
             alt="detailed map plan of the battle"
             class="mapplan-detailed"
           />
@@ -193,7 +193,7 @@
               dock gates if the Campbeltown failed to reach its target.
             </p>
             <img
-              src="assets/images/St-Nazaire-mockup.png"
+              src="assets/images/st-Nazaire-mockup.png"
               alt="mock up module of the dock"
               class="mock-up"
             />
@@ -201,7 +201,7 @@
         </section>
         <section class="st-nazaire-main-content">
           <img
-            src="assets/images/comando battle plan.JPG"
+            src="assets/images/comando-battle-plan.JPG"
             alt="battle plan for commandos once landed"
             class="mapplan-detailed"
           />
@@ -262,7 +262,7 @@
         </section>
         <section class="st-nazaire-main-content">
           <img
-            src="assets/images/Operation-Chariot-memorial.webp"
+            src="assets/images/operation-chariot-memorial.webp"
             alt="full picture of memorial"
             class="memorial-fullsize"
           />
@@ -314,7 +314,7 @@
           </h2>
           <figure class="st-nazaire-memorial">
             <img
-              src="assets/images/Operation-Chariot-memorial-closeup.webp"
+              src="assets/images/operation-chariot-memorial-closeup.webp"
               alt="Elephant at sunset"
               width="100%"
               class="st-nazaire-memorial-img"
