--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
     <link
       rel="icon"
       type="images/x-icon"
-      href="assets/images/Commando-Insignia.jpg"
+      href="assets/images/commando-insignia.jpg"
     />
     <title>St Nazaire Raid</title>
     <!-- Meta tags for search engines -->
@@ -24,7 +24,7 @@
     <header>
       <a href="index.html">
         <img
-          src="assets/images/Commando-Insignia.jpg"
+          src="assets/images/commando-insignia.jpg"
           alt="british commando insignia"
           id="logo"
         />
@@ -61,7 +61,7 @@
         <!-- first colum -->
         <div class="column">
           <img
-            src="assets/images/Aerial reconnaissance.jpg"
+            src="assets/images/aerial-reconnaissance.jpg"
             alt="aerial reconnaissance of St Nazaire"
             style="width: 100%"
             class="myDIV"
@@ -70,12 +70,12 @@
             I am shown when someone hovers over the div above.
           </div>
           <img
-            src="assets/images/caputred commandos 2.jpg"
+            src="assets/images/caputred-commandos-2.jpg"
             alt="caputred commando soliders after the raid"
             style="width: 100%"
           />
           <img
-            src="assets/images/caputred commandos.jpg"
+            src="assets/images/caputred-commandos.jpg"
             alt="caputred commando soliders after the raid"
             style="width: 100%"
           />
@@ -83,22 +83,22 @@
         <!-- second colum -->
         <div class="column">
           <img
-            src="assets/images/HMS Campbeltown hit dock.webp"
+            src="assets/images/hms-campbeltown-hit-dock.webp"
             alt="HMS campbeltown after hitting the dock"
             style="width: 100%"
           />
           <img
-            src="assets/images/HMS campbeltown wedged in dock.jpg"
+            src="assets/images/hms-campbeltown-wedged-in-dock.jpg"
             alt="HMS campbeltown wedged into the dock"
             style="width: 100%"
           />
           <img
-            src="assets/images/HMS Campbeltown.webp"
+            src="assets/images/hms-campbeltown.webp"
             alt="HMS campbeltown image before the raid"
             style="width: 100%"
           />
           <img
-            src="assets/images/HMS Campbeltown conversion.webp"
+            src="assets/images/hms-campbeltown-conversion.webp"
             alt="HMS campbeltown being converted"
             style="width: 100%"
           />
@@ -106,22 +106,22 @@
         <!-- third colum -->
         <div class="column">
           <img
-            src="assets/images/St Nazaire aftermath.jpg"
+            src="assets/images/st-nazaire-aftermath.jpg"
             alt="aerial photo of the aftermath of the raid"
             style="width: 100%"
           />
           <img
-            src="assets/images/Lt-Col-R.K.-Montgomery.webp"
+            src="assets/images/lt-col-r.k.-montgomery.webp"
             alt="picture of Lt Col R.K -Montgomery"
             style="width: 100%"
           />
           <img
-            src="assets/images/wounded solider.webp"
+            src="assets/images/wounded-solider.webp"
             alt="image of a caputred wounded solider"
             style="width: 100%"
           />
           <img
-            src="assets/images/St_ Nazaire  HMS Campbeltown 3.jpg"
+            src="assets/images/st-nazaire-hms-campbeltown-3.jpg"
             alt="HMS Campbeltown from another angle wedged in dock"
             style="width: 100%"
           />
@@ -129,17 +129,17 @@
         <!-- fourth colum -->
         <div class="column">
           <img
-            src="assets/images/modification to campbeltown.webp"
+            src="assets/images/modification-to-campbeltown.webp"
             alt="diagram showing modification to be made"
             style="width: 100%"
           />
           <img
-            src="assets/images/plan of attack.webp"
+            src="assets/images/plan-of-attack.webp"
             alt="photographic with notes showing plan of attack"
             style="width: 100%"
           />
           <img
-            src="assets/images/german troops next day.jpg"
+            src="assets/images/german-troops-next-day.jpg"
             alt="german troops clearing St Nazaire next day"
             style="width: 100%"
           />
@@ -149,7 +149,7 @@
             style="width: 100%"
           />
           <img
-            src="assets/images/german tirptz.png"
+            src="assets/images/german-tirptz.png"
             alt="picture of tirptz from the air"
             style="width: 100%"
           />
@@ -160,7 +160,7 @@
         <h3 class="vc-winners-title">VC Winners</h3>
         <section class="vc-winners-card">
           <img
-            src="assets/images/William Alfred SAVAGE.png"
+            src="assets/images/willia-alfred-savage.png"
             alt="image of VC winner William Alfred SAVAGE"
           />
           <h3 class="vc-winners-card-title">William Alfred SAVAGE</h3>
@@ -192,7 +192,7 @@
         </section>
         <section class="vc-winners-card">
           <img
-            src="assets/images/Robert Edward Dudley RYDER.png"
+            src="assets/images/robert-edward-dudley-ryder.png"
             alt="vc winner Robert Edward Dudley RYDER"
           />
           <h3 class="vc-winners-card-title">Robert Edward Dudley RYDER</h3>
@@ -225,7 +225,7 @@
         </section>
         <section class="vc-winners-card">
           <img
-            src="assets/images/Chalres Newman.webp"
+            src="assets/images/chalres-newman.webp"
             alt="vc winner Chalres Newman"
           />
           <h3 class="vc-winners-card-title">Augustus Charles NEWMAN</h3>
@@ -260,7 +260,7 @@
         </section>
         <section class="vc-winners-card">
           <img
-            src="assets/images/Thomas Frank DURRANT.png"
+            src="assets/images/thomas-frank-durrant.png"
             alt="vc winner Thomas Frank DURRANT.png"
           />
           <h3 class="vc-winners-card-title">Thomas Frank DURRANT</h3>
@@ -292,7 +292,7 @@
         </section>
         <section class="vc-winners-card">
           <img
-            src="assets/images/Stephen Halden BEATTIE.png"
+            src="assets/images/stephen-halden-beattie.png"
             alt="vc winner Stephen Halden BEATTIE"
           />
           <h3 class="vc-winners-card-title">Stephen Halden BEATTIE</h3>
