added image to mobile nav and styled

--- a/index.html
+++ b/index.html
@@ -37,9 +37,16 @@
             <i class="fa-solid fa-bars"></i>
           </div>
           <nav class="mobile-navlinks">
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="media-links.html">Mutli Media</a></li>
+            <img
+              src="assets/images/commando-insignia.jpg"
+              alt="british commando insignia"
+              id="mobile-navlinks-logo"
+            />
+            <ul style="height: 40rem">
+              <li><a href="index.html" class="active">Home</a></li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="media-links.html">Mutli Media</a></li>
+            </ul>
           </nav>
         </div>
       </div>
