--- a/index.html
+++ b/index.html
@@ -336,19 +336,97 @@
     </main>
     <!-- footer -->
     <footer>
-      <!-- creater details -->
+      <!-- creater details
       <div>
         <p>created by:</p>
         <p>giulio montaque</p>
-      </div>
+      </div> -->
       <!-- nav bar for webiste -->
-      <nav>
+      <section>
+        <a
+          class="footer-external"
+          target="_blank"
+          rel="noopener"
+          aria-label="Visit this page to visit the St Nazaire town website (opens in a new tab)"
+          href="https://www.saint-nazaire-tourisme.uk/explore/discover-our-heritage/war-and-peace-stories/"
+        >
+          <img
+            src="assets/images/reversed-r-red.svg"
+            alt="logo of St Nazaire website"
+          />Visit St Nazaire</a
+        >
+      </section>
+      <section>
+        <a
+          class="footer-external"
+          target="_blank"
+          rel="noopener"
+          aria-label="Visit this page to view the Declassifeid documents about the battle (opens in a new tab)"
+          href="https://www.navy.gov.au/sites/default/files/documents/Battle_Summary_12.pdf"
+        >
+          <img
+            src="assets/images/top-secrect.png"
+            alt=" top secret image of classfied documents"
+            width="50%"
+          />
+          Declassifeid war Documents</a
+        >
+      </section>
+      <section>
+        <a
+          class="footer-external"
+          target="_blank"
+          rel="noopener"
+          aria-label="Visit this page to listen to a a documentary on St Nazaire  (opens in a new tab)"
+          href="https://shows.acast.com/dansnowshistoryhit/episodes/destroying-a-nazi-stronghold-the-st-nazaire-raid"
+        >
+          <img src="assets/images/history-hit.png" alt="history hit logo" />Dan
+          Snow's History Hit</a
+        >
+      </section>
+      <!-- <nav>
         <ul id="navlinks">
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="media-links.html">Mutli Media</a></li>
+          <li>
+            <a
+              target="_blank"
+              rel="noopener"
+              aria-label="Visit this page to visit the St Nazaire town website (opens in a new tab)"
+              href="https://www.saint-nazaire-tourisme.uk/explore/discover-our-heritage/war-and-peace-stories/"
+              ><img
+                src="assets/images/reversed-r-red.svg"
+                alt="logo of St Nazaire website"
+              />Visit St Nazaire</a
+            >
+          </li>
+          <li>
+            <a
+              target="_blank"
+              rel="noopener"
+              aria-label="Visit this page to view the Declassifeid documents about the battle (opens in a new tab)"
+              href="https://www.navy.gov.au/sites/default/files/documents/Battle_Summary_12.pdf"
+            >
+              <img
+                src="assets/images/top-secrect.png"
+                alt=" top secret image of classfied documents"
+                width="10%"
+              />
+              Declassifeid war Documents</a
+            >
+          </li>
+          <li>
+            <a
+              target="_blank"
+              rel="noopener"
+              aria-label="Visit this page to listen to a a documentary on St Nazaire  (opens in a new tab)"
+              href="https://shows.acast.com/dansnowshistoryhit/episodes/destroying-a-nazi-stronghold-the-st-nazaire-raid"
+              ><img
+                src="assets/images/history-hit.png"
+                alt="history hit logo"
+              />Dan Snow's History Hit</a
+            >
+          </li>
         </ul>
-      </nav>
+      </nav> -->
     </footer>
     <!-- fontawesome icons -->
     <script
